fixing horizontal scroll

--- a/src/index.css
+++ b/src/index.css
@@ -6,12 +6,12 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  max-width: 100vw;
+  /* max-width: 100vw; */
 }
 
 html {
-  overflow-x: hidden;
-  max-width: 100vw;
+  /* overflow-x: hidden; */
+  /* max-width: 100vw; */
 }
 
 code {
